src/objects/Lecture__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lectures</relationshipLabel>
        <relationshipName>Lectures</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Course_Account</label>
        <referenceTo>Course_Account__c</referenceTo>
        <relationshipLabel>Lectures</relationshipLabel>
        <relationshipName>Lectures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <formula>Course_Account__r.Course__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Lecture__c</fullName>
        <label>Date of Lecture</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Time__c</fullName>
        <label>In Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>IF(MONTH(  Date_of_Lecture__c )= 1,&quot;JAN&quot;, IF(MONTH(  Date_of_Lecture__c )= 2,&quot;FEB&quot;,
IF(MONTH(  Date_of_Lecture__c )= 3, &quot;MAR&quot;, IF(MONTH(  Date_of_Lecture__c )= 4,&quot;APR&quot;,
IF(MONTH(  Date_of_Lecture__c )= 5, &quot;MAY&quot;, IF(MONTH(  Date_of_Lecture__c )= 6, &quot;JUN&quot;,
IF(MONTH(  Date_of_Lecture__c )= 7, &quot;JUL&quot;, IF(MONTH(  Date_of_Lecture__c )= 8, &quot;AUG&quot;,
IF(MONTH(  Date_of_Lecture__c )= 9, &quot;SEPT&quot;, IF(MONTH(  Date_of_Lecture__c )= 10, &quot;OCT&quot;,
IF(MONTH(  Date_of_Lecture__c )=11, &quot;NOV&quot;,&quot;DEC&quot;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_Time__c</fullName>
        <label>Out Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Professor__c</fullName>
        <label>Professor</label>
        <referenceTo>Professor__c</referenceTo>
        <relationshipLabel>Lectures</relationshipLabel>
        <relationshipName>Lectures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Topics_Covered__c</fullName>
        <label>Topics Covered</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Time_in_Hrs__c</fullName>
        <formula>ROUND(MOD((Out_Time__c - In_Time__c)*24,24),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time in Hrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_in_Mins__c</fullName>
        <formula>Total_Time_in_Hrs__c * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time in Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR(  Date_of_Lecture__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Lecture</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Lecture Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lectures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>